tests/models/enum/unnamed/u8/pass/validate.rs
use dade::{model, Result};
fn validate_fn(value: u8) -> Result<u8> {
    Ok(value)
}
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        u8
    ),
}
fn main() {}
