tests/models/enum/unnamed/u8/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        u8
    ),
}
fn main() {}
